# piscraper

./: .gitignore  LICENSE  Makefile  README.md  docs.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  urls.yaml
docs/: conf.py  modules.rst  scraper.config.rst  scraper.rst  scraper.scrapers.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  scraper.config.doctree  scraper.doctree  scraper.errors.doctree  scraper.models.doctree  scraper.scrapers.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scraper.config.html  scraper.errors.html  scraper.html  scraper.models.html  scraper.scrapers.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/scraper/config/: config.html
docs/_build/html/_modules/scraper/errors/: errors.html
docs/_build/html/_modules/scraper/models/: response.html
docs/_build/html/_modules/scraper/scrapers/: scrape.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  scraper.errors.rst.txt  scraper.models.rst.txt
src/: scrape.py
src/scraper/: __init__.py  config_test.py  scrape.py
src/scraper/config/: config.py
src/scraper/errors/: __init__.py  errors.py
src/scraper/models/: response.py
src/scraper/scrapers/: scrape.py
tests/: test_config.py
