[metadata]
name = piscraper
description-file = README.md
author = Bret Beatty
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = file: VERSION.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = 
    find:
install_requires =
    requests==2.27.1
    beautifulsoup4==4.10.0
    PyYaml==6.0
    psycopg2-binary==2.9.3
    SQLAlchemy==1.4.34
python_requires = >=3.6
package_dir=
    =src
zip_safe = no

[options.packages.find]
where = src
exclude = test

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 200